Fix: Removed excessive top margin on mobile.

--- a/src/scss/pages/_mc_index-welcome_to_mc.scss
+++ b/src/scss/pages/_mc_index-welcome_to_mc.scss
@@ -188,14 +188,6 @@ td.current_marathon_times {
     max-width: auto;
   }
 
-  #title_card--current_marathon_details h2 {
-    /* Place as much space between the current marathon details div & 
-        the welcome to marathon christmas div on mobile as there is between
-        the marathon christmas h1 and the combined welcome to marathon christmas /
-        current marathon details div on desktop view. */
-    margin-top: 100px;
-  }
-
   /* Resize elements for mobile */
   /* Note: Remember that tweaked tablet nav menu elements are _not_ resized here! */
 
